# openwork

./: .gitignore  AGENTS.md  design-prd.md  design.ts  index.html  package.json  progress.json  tailwind.config.ts
.opencode/skill/opencode-mirror/: SKILL.md
.opencode/skill/openwork-core/: SKILL.md
.opencode/skill/tauri-solidjs/: SKILL.md
scripts/: _util.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Button.tsx  PartView.tsx
src/lib/: tauri.ts
