[package]
name = "openwork"
version = "0.0.0"
description = "OpenWork"
authors = ["Digital Empire"]
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
